--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <form id="form">
-
+            <h3>SiddhuHub.net</h3>
             <input type="text" autocomplete="off" id="search" placeholder="Search" class="search">
         </form>
     </header>
